--- a/src/main/resources/templates/post_list.html
+++ b/src/main/resources/templates/post_list.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>JS Postlist</title>
+    <meta charset="UTF-8"/>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -9,7 +10,6 @@
             crossorigin="anonymous"
     />
 </head>
-
 <body>
 <div class="container">
     <div class="page-header"><h1>게시글 목록</h1></div>
